--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "uuid": "^10.0.0"
   }
 }
