--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -18,6 +19,7 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.6",
     "uuid": "^10.0.0"
